--- a/assignments/final/deploy/index.html
+++ b/assignments/final/deploy/index.html
@@ -10,8 +10,15 @@
     <title>Bridget McLaughlin | WMGD-330 Final/title>
   </head>
   <body>
-    <div>
-        <img src="./img/mobile_logo.png"alt=""/>
+    <div class="header">
+        <img src="./img/mobile_logo.png" alt="The site logo" />
+        <div>
+            <a href="#">Home</a>   
+            <a href="#">Contact Us</a>
+            <a href="#">Resources</a> 
+            <a href="#">Cafe</a> 
+            <a href="#">Our Story</a> 
+        </div>
     </div>
     <script src="js/scripts-min.js"></script>
   </body>
