--- a/assignments/final/deploy/contact_us.html
+++ b/assignments/final/deploy/contact_us.html
@@ -7,7 +7,7 @@
     <!-- Google Fonts Start -->
     <!-- Google Fonts End -->
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Bridget McLaughlin | WMGD-330 Final</title>
+    <title>Contact Us</title>
   </head>
   <body>
     <div class="header">
