--- a/assignments/final/deploy/index.html
+++ b/assignments/final/deploy/index.html
@@ -73,11 +73,11 @@
             <div>
                 <section class="bullet_list">
                     <h2 class="intro_bullet">Vault + Vine is a floral studio and thoughtfully curated retail space in East Falls, Philadelphia. Founded in 2017, we offer:</h2>
-                    <ol class="bullet">Floral design services for weddings and events</ol> 
-                    <ol class="bullet">Custom floral arrangements made daily and delivered</ol>
-                    <ol class="bullet">Plants for the home and garden </ol>
-                    <ol class="bullet">A collection of specialty homegoods, gifts, and objects (many sourced from Philadelphia-area creators)</ol>
-                    <ol class="bullet">A café and gathering place </ol>
+                    <ul class="bullet">Floral design services for weddings and events</ul> 
+                    <ul class="bullet">Custom floral arrangements made daily and delivered</ul>
+                    <ul class="bullet">Plants for the home and garden </ul>
+                    <ul class="bullet">A collection of specialty homegoods, gifts, and objects (many sourced from Philadelphia-area creators)</ul>
+                    <ul class="bullet">A café and gathering place </ul>
                 </section>
             </div>
             
@@ -101,15 +101,24 @@
                 <h2 class="touch_button">get in touch</h2>
             </div>
             
-    <footer class="footer">
-                    <div class="icons">
-                     <img class="pinterest" src="./img/pinterest.png" alt="pinterest icon"/>
-                     <img class="facebook" src="./img/facebook.png" alt="facebook icon"/>
-                     <img class="instagram" src="./img/instagram.png" alt="instagram icon"/>
-                     <img class="doordash" src="./img/doordash.png" alt="doordash icon"/>
+    <div class="background">
+                    <div class="newsletter">
+                        <h3 class="newsletter_signup">NEWSLETTER SIGN UP</h3>
+                        <input class="email" type="text" placeholder="EMAIL">
+                        <div>
+                            <button class="submit">submit</button>
+                        </div>
                     </div>
-                    <p class="info">2017 VAULT + VINE LLC., ALL RIGHTS RESERVED // CONTACT US</p>
-                </footer>
+                </div>
+    <footer class="footer">
+                        <div class="icons">
+                         <img class="pinterest" src="./img/pinterest.png" alt="pinterest icon"/>
+                         <img class="facebook" src="./img/facebook.png" alt="facebook icon"/>
+                         <img class="instagram" src="./img/instagram.png" alt="instagram icon"/>
+                         <img class="doordash" src="./img/doordash.png" alt="doordash icon"/>
+                        </div>
+                        <p class="info">2017 VAULT + VINE LLC., ALL RIGHTS RESERVED // CONTACT US</p>
+                    </footer>
     <script src="js/scripts-min.js"></script>
   </body>
 </html>
