--- a/assignments/final/deploy/contact_us.html
+++ b/assignments/final/deploy/contact_us.html
@@ -73,11 +73,11 @@
             <div>
                 <section class="bullet_list">
                     <h2 class="intro_bullet">Vault + Vine is a floral studio and thoughtfully curated retail space in East Falls, Philadelphia. Founded in 2017, we offer:</h2>
-                    <ol class="bullet">Floral design services for weddings and events</ol> 
-                    <ol class="bullet">Custom floral arrangements made daily and delivered</ol>
-                    <ol class="bullet">Plants for the home and garden </ol>
-                    <ol class="bullet">A collection of specialty homegoods, gifts, and objects (many sourced from Philadelphia-area creators)</ol>
-                    <ol class="bullet">A café and gathering place </ol>
+                    <ul class="bullet">Floral design services for weddings and events</ul> 
+                    <ul class="bullet">Custom floral arrangements made daily and delivered</ul>
+                    <ul class="bullet">Plants for the home and garden </ul>
+                    <ul class="bullet">A collection of specialty homegoods, gifts, and objects (many sourced from Philadelphia-area creators)</ul>
+                    <ul class="bullet">A café and gathering place </ul>
                 </section>
             </div>
             
