--- a/assignments/final/deploy/index.html
+++ b/assignments/final/deploy/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- Google Fonts Start -->
-    <!-- Google Fonts End -->
-    <link rel="stylesheet" href="css/styles.css" />
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <!-- Google Fonts Start -->
+        <!-- Google Fonts End -->
+        <link rel="stylesheet" href="css/styles.css" />
     <title>Bridget McLaughlin | WMGD-330 Final</title>
-  </head>
   <body>
     <div class="header">
         <img src="./img/mobile_logo.png" alt="mobile site logo" class="mobile_logo"/>
         <img src="./img/text_logo.png" alt="site logo" class="desktop_logo"/>
         <img src="./img/nav_icon.png" alt="navigation icon" class="mobile_menu"/>
         <div class="header__navigation">
-            <a class="header__link" href="#">Home</a>   
-            <a class="header__link" href="#">Contact Us</a>
+            <a class="header__link" href="./index.html">Home</a>   
+            <a class="header__link" href="./contact_us.html">Contact Us</a>
             <a class="header__link" href="#">Resources</a> 
             <a class="header__link" href="#">Cafe</a> 
             <a class="header__link" href="#">Our Story</a> 
