--- a/assignments/final/deploy/contact_us.html
+++ b/assignments/final/deploy/contact_us.html
@@ -7,6 +7,7 @@
       <!-- Google Fonts Start -->
       <!-- Google Fonts End -->
       <link rel="stylesheet" href="css/styles.css" />
+      <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
   <title>Contact Us</title>
   <body>
     <div class="header">
