--- a/assignments/final/deploy/contact_us.html
+++ b/assignments/final/deploy/contact_us.html
@@ -18,7 +18,7 @@
             <a class="header__link" href="./index.html">Home</a>   
             <a class="header__link" href="./contact_us.html">Contact Us</a>
             <a class="header__link" href="#">Resources</a> 
-            <a class="header__link" href="#">Cafe</a> 
+            <a class="header__link" href="./cafe.html">Cafe</a> 
             <a class="header__link" href="#">Our Story</a> 
         </div>
     </div>
