--- a/assignments/final/deploy/cafe.html
+++ b/assignments/final/deploy/cafe.html
@@ -24,6 +24,7 @@
             </div>
         </div>
         <div>
+                    <h1 class="cafe_title">CAFE</h1>
                     <p class="cafe_hero">When we conceptualized Vault + Vine, we wanted to create a space where both our guests and
                         staff would feel at home. Located in the heart of East Falls, our café is the perfect place to unwind, meet a
                         friend, or catch up on some work. </p>
